chore: remove binary files from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ a.txt
 .envrc
 .direnv/
 
+firmware/all_firmware.tar.gz
+firmware/kernelcache.release.mac13j
+
 # --- SECRETS ---
 # It is a very good practice to keep all secret files (passwords, API keys)
 # in a dedicated, untracked directory. Uncomment the line below if you create one.
