--- a/overlays/theme-data/alacritty-macchiato.toml
+++ b/overlays/theme-data/alacritty-macchiato.toml
@@ -1,23 +1,43 @@
+# overlays/theme-data/alacritty-macchiato.toml
+
 [colors.primary]
 background = "#24273a"
 foreground = "#cad3f5"
-dim_foreground = "#7f849c"
+dim_foreground = "#cad3f5"
 bright_foreground = "#cad3f5"
+
 [colors.cursor]
 text = "#24273a"
 cursor = "#f4dbd6"
-[colors.search]
-matches = { foreground = "#24273a", background = "#a5adcb" }
-focused_match = { foreground = "#24273a", background = "#a6da95" }
+
+[colors.vi_mode_cursor]
+text = "#24273a"
+cursor = "#b7bdf8"
+
+[colors.search.matches]
+foreground = "#24273a"
+background = "#c6a0f6"
+
+[colors.search.focused_match]
+foreground = "#24273a"
+background = "#a6da95"
+
 [colors.footer_bar]
 foreground = "#24273a"
 background = "#a5adcb"
-[colors.hints]
-start = { foreground = "#24273a", background = "#eed49f" }
-end = { foreground = "#24273a", background = "#a5adcb" }
+
+[colors.hints.start]
+foreground = "#24273a"
+background = "#ed8796"
+
+[colors.hints.end]
+foreground = "#24273a"
+background = "#a5adcb"
+
 [colors.selection]
 text = "#24273a"
 background = "#f4dbd6"
+
 [colors.normal]
 black = "#494d64"
 red = "#ed8796"
@@ -27,6 +47,7 @@ blue = "#8aadf4"
 magenta = "#f5bde6"
 cyan = "#8bd5ca"
 white = "#b8c0e0"
+
 [colors.bright]
 black = "#5b6078"
 red = "#ed8796"
@@ -36,6 +57,7 @@ blue = "#8aadf4"
 magenta = "#f5bde6"
 cyan = "#8bd5ca"
 white = "#a5adcb"
+
 [colors.dim]
 black = "#494d64"
 red = "#ed8796"
